# Inz_apps

./: README.md  build_all.sh
PDI_Server_Obsolete/: PDI_Server.sln  README.md
PDI_Server_Obsolete/src/StudentAPI/: Program.cs  Startup.cs  StudentAPI.csproj  appsettings.Development.json
PDI_Server_Obsolete/src/StudentAPI/Controllers/: StudentsController.cs
PDI_Server_Obsolete/src/StudentAPI/DTOs/: StudentCreateDto.cs  (+2 more)
PDI_Server_Obsolete/test/StudentAPI.Tests/: StudentAPI.Tests.csproj  StudentTests.cs  StudentsControllerTests.cs
Server/: CSV.csv  PKC_ONOS.csv  PKC_ONOSResults.csv  PKC_ONOS_Requirements.csv  PKC_ONOS_Results.csv  SQLQuery.sql  ServerAPI.sln
Server/ClientAPI/: Program.cs  _Imports.razor
Server/ClientAPI/Properties/: launchSettings.json
Server/ClientAPI/Shared/: NavMenu.razor
Server/ClientAPI/wwwroot/: index.html  manifest.json
Server/ClientApplication/: About.aspx.designer.cs  ClientApplication.csproj  Contact.aspx.designer.cs  Default.aspx.designer.cs  Global.asax.cs  Register.html  Site.Master.cs  Site.Master.designer.cs
Server/ClientApplication/App_Start/: BundleConfig.cs
Server/ClientApplication/Properties/: AssemblyInfo.cs
Server/ClientSide/: Program.cs  Startup.cs
Server/ClientSide/Account/: Login.cshtml  Login.cshtml.cs
Server/ClientSide/Pages/: Error.cshtml.cs  Index.cshtml.cs  Privacy.cshtml.cs  _ViewImports.cshtml
Server/ClientSide/Properties/: launchSettings.json
Server/CryptographyTesting/: AES.cs  FileOperations.cs  Operations.cs  Program.cs  XCryptographyTesting.csproj
Server/CryptologyTesting/: AES.cs  Operations.cs  Program.cs
Server/FileOperations/: Class1.cs  Program.cs  RegisteredUser.cs
Server/src/ServerAPI/: Program.cs  ServerAPI.csproj  Startup.cs  appsettings.Development.json  appsettings.json  nlog.config
Server/test/ServerAPI.Tests/: UnitTest1.cs
Server_WebAPI/: Server_WebAPI.sln
Server_WebAPI/cryptography/CryptographyTesting/: CryptographyTesting.csproj  FileOperations.cs  Operations.cs  Program.cs
Server_WebAPI/files/: 1-Azure_WebAPI.postman_collection.json  2021Z_PKC_ONOS — kopia.csv  2021Z_PKC_ONOS.csv  2021Z_PKC_ONOS_01143845@pw.edu.pl_Results.csv  2021Z_PKC_ONOS_Requirements.csv  2021Z_PKC_ONOS_Results.csv  QueryForNumOfCommandsExecuted.sql  SQLQuery.sql
Server_WebAPI/files/FileOperations/: Program.cs
Server_WebAPI/files/Group1/: 2021Z_PKC_ONOS.csv
Server_WebAPI/files/Group2/: 2021Z_PKC_ONOS.csv
Server_WebAPI/files/Group3/: 2021Z_PKC_ONOS.csv
Server_WebAPI/src/ServerAPI/: Program.cs  Register.html  ServerAPI.csproj  Startup.cs  appsettings.json  nlog.config  page.html
Server_WebAPI/tests/ServerAPI.Tests/: UnitTest1.cs
Server_WebAPI/tests/Server_WebAPI.Tests/: CryptographyOperationsTests.cs  EitiEmployeeControllerTests.cs  EitiLabUserServiceTests.cs  EmailControllerTests.cs  EmailServiceTests.cs  EmployeeUserServiceTests.cs  LabUserControllerTests.cs  Server_WebAPI.Tests.csproj
created_system_scripts/: eiti-main.service  eiti-module.service  init-machine.sh  readme  visudo_content
identify_lab_data/: keys  lab_end_date  server_responses
identify_machine_program/: CMakeCache.txt  CMakeLists.txt  IdentifyOnStart  IdentifyOnStartup  Makefile  cmake_install.cmake  identify_main.cpp  registerUser
identify_machine_program/GraphicManagement/: CMakeCache.txt  CMakeLists.txt  GraphicManager.cpp  GraphicManager.h  Makefile  cmake_install.cmake
identify_machine_program/IOConfig/: Makefile  cmake_install.cmake
identify_machine_program/RESTConnector/: CMakeLists.txt  Makefile  RestServerConnector.cpp  RestServerConnector.h  cmake_install.cmake
identify_machine_program/RESTConnector/IOConfig/: Makefile  cmake_install.cmake
identify_machine_program/RESTConnector/OPENSSL_AES_256/: Makefile  OpenSSLAesEncryptor.cpp  OpenSSLAesEncryptor.h  cmake_install.cmake
identify_machine_program/RESTConnector/UserDetailsDTO/: CMakeLists.txt  Makefile  UserDetailsDTO.cpp  UserDetailsDTO.h  cmake_install.cmake
local_server/data/: database.mv.db
main_service_program/: CMakeCache.txt  CMakeLists.txt  HttpRestClient  MainService  Makefile  client_main.cpp  client_service.cpp  cmake_install.cmake  main_service.cpp  startClient
main_service_program/IOConfig/: CMakeLists.txt  IOConfig.h  Makefile  cmake_install.cmake
main_service_program/IOServerConfig/: IOConfig.cpp  IOConfig.h
main_service_program/MessageDTO/: FinalStudentDetails.cpp  FinalStudentDetails.h
main_service_program/RESTConnector/: CMakeLists.txt  Makefile  RestServerConnector.cpp  RestServerConnector.h  cmake_install.cmake
main_service_program/RESTConnector/IOConfig/: IOConfig.cpp  IOConfig.h  Makefile  cmake_install.cmake
main_service_program/RESTConnector/OPENSSL_AES_256/: CMakeLists.txt  Makefile  OpenSSLAesEncryptor.cpp  OpenSSLAesEncryptor.h  cmake_install.cmake
main_service_program/RESTServerConnector/: CMakeLists.txt  RestServerConnector.cpp  RestServerConnector.h
main_service_program/client/: CMakeCache.txt  CMakeLists.txt  HttpRestClient  client_main.cpp  client_service.cpp  cmake_install.cmake
main_service_program/client/IOConfig/: IOConfig.cpp
main_service_program/client/MessageDTO/: CMakeLists.txt  FinalStudentDetails.h  InitStudentDetails.cpp  InitStudentDetails.h  Makefile  cmake_install.cmake
main_service_program/server/data/: database.mv.db  database.trace.db
module_service_program/: CMakeCache.txt  CMakeLists.txt  Makefile  ModuleService  cmake_install.cmake  module_service.cpp  startModule
module_service_program/IOConfig/: CMakeLists.txt  IOConfig.cpp  IOConfig.h  Makefile  cmake_install.cmake
module_service_program/ModuleManager/: CMakeLists.txt  Makefile  ModuleManager.cpp  ModuleManager.h  cmake_install.cmake
output_files/: main_logs  server_responses
output_files/do_testowania/: HttpRestClient  zad.py
output_files/for_testing/: run_service  run_service.cpp
rgstr_trace/: rqrm  rqrm.txt
server_implementation/: pom.xml
server_implementation/data/: database.mv.db  database.trace.db
server_run/data/: database.mv.db  database.trace.db
test_encryption/: pom.xml
(+203 files in other folders)
